# SmartStainer

./: .clang-format  CMakeLists.txt  LICENSE  main.cpp  main_window.cpp  main_window.h  main_window.ui  staining_scheme_generator.cc  staining_scheme_generator.h  version.h
example_files/: five-lasers-similarity.txt  library.txt  similarity.txt  three-lasers-similarity.txt
src/: main_window.cpp  staining_scheme_generator.cc  staining_scheme_generator.h
src/ui/: main_window.ui
